// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="global_permissions"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="global_permissions.permission"
  />
  <PageHeader
    loading={true}
  />
  <AllHoldersList
    filter="all"
    grantPermissionToGroup={[Function]}
    grantPermissionToUser={[Function]}
    groups={[]}
    loading={true}
    onFilter={[Function]}
    onLoadMore={[Function]}
    onQuery={[Function]}
    permissions={
      [
        {
          "description": "global_permissions.admin.desc",
          "key": "admin",
          "name": "global_permissions.admin",
        },
        {
          "category": "administer",
          "permissions": [
            {
              "description": "global_permissions.gateadmin.desc",
              "key": "gateadmin",
              "name": "global_permissions.gateadmin",
            },
            {
              "description": "global_permissions.profileadmin.desc",
              "key": "profileadmin",
              "name": "global_permissions.profileadmin",
            },
          ],
        },
        {
          "description": "global_permissions.scan.desc",
          "key": "scan",
          "name": "global_permissions.scan",
        },
        {
          "category": "creator",
          "permissions": [
            {
              "description": "global_permissions.provisioning.desc",
              "key": "provisioning",
              "name": "global_permissions.provisioning",
            },
          ],
        },
      ]
    }
    query=""
    revokePermissionFromGroup={[Function]}
    revokePermissionFromUser={[Function]}
    users={[]}
  />
</div>
`;

exports[`should render correctly 2`] = `
<div
  className="page page-limited"
>
  <Suggestions
    suggestions="global_permissions"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="global_permissions.permission"
  />
  <PageHeader
    loading={false}
  />
  <AllHoldersList
    filter="all"
    grantPermissionToGroup={[Function]}
    grantPermissionToUser={[Function]}
    groups={
      [
        {
          "name": "Anyone",
          "permissions": [
            "admin",
            "codeviewer",
            "issueadmin",
          ],
        },
        {
          "description": "SonarSource team",
          "id": "1",
          "name": "SonarSource",
          "permissions": [],
        },
      ]
    }
    groupsPaging={
      {
        "pageIndex": 1,
        "pageSize": 100,
        "total": 2,
      }
    }
    loading={false}
    onFilter={[Function]}
    onLoadMore={[Function]}
    onQuery={[Function]}
    permissions={
      [
        {
          "description": "global_permissions.admin.desc",
          "key": "admin",
          "name": "global_permissions.admin",
        },
        {
          "category": "administer",
          "permissions": [
            {
              "description": "global_permissions.gateadmin.desc",
              "key": "gateadmin",
              "name": "global_permissions.gateadmin",
            },
            {
              "description": "global_permissions.profileadmin.desc",
              "key": "profileadmin",
              "name": "global_permissions.profileadmin",
            },
          ],
        },
        {
          "description": "global_permissions.scan.desc",
          "key": "scan",
          "name": "global_permissions.scan",
        },
        {
          "category": "creator",
          "permissions": [
            {
              "description": "global_permissions.provisioning.desc",
              "key": "provisioning",
              "name": "global_permissions.provisioning",
            },
          ],
        },
      ]
    }
    query=""
    revokePermissionFromGroup={[Function]}
    revokePermissionFromUser={[Function]}
    users={
      [
        {
          "avatar": "admin-avatar",
          "email": "admin@gmail.com",
          "login": "admin",
          "name": "Admin Admin",
          "permissions": [
            "admin",
          ],
        },
        {
          "avatar": "user-avatar-1",
          "email": "user1@gmail.com",
          "login": "user1",
          "name": "User Number 1",
          "permissions": [],
        },
        {
          "avatar": "user-avatar-2",
          "email": "user2@gmail.com",
          "login": "user2",
          "name": "User Number 2",
          "permissions": [],
        },
      ]
    }
    usersPaging={
      {
        "pageIndex": 1,
        "pageSize": 100,
        "total": 3,
      }
    }
  />
</div>
`;
